--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,13 @@ edition = "2021"
 [dependencies]
 clap = "3.1.8"
 local-ip-address = "0.4.4"
-tide = "0.16.0"
 once_cell = "1.10.0"
 colored = "2.0.0"
 notify = "4.0.17"
 mime_guess = "2.0.4"
-tide-websockets = "0.4.0"
-async-std = { version = "1.10.0", features = ["attributes"] }
 uuid = { version = "0.8.2", features = ["v4"] }
+actix = "0.13.0"
+actix-web = "4.0.1"
+actix-web-actors = "4.1.0"
+actix-files = "0.6.0"
+tokio = { version = "1.17.0", features = ["full"] }
